phase-0-css-fundamentals-lab

--- a/index.html
+++ b/index.html
@@ -3,51 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Estate Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>My Little Rainbow</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
-
-    <header>
-        <h1>Welcome to Our Real Estate Site</h1>
-    </header>
-
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Listings</a>
-        <a href="#">Contact</a>
-        <a href="#">About Us</a>
-    </nav>
-
-    <main>
-        <section id="featured-property">
-            <h2>Featured Property</h2>
-            <figure>
-                <img src="house.jpg" alt="Beautiful house">
-                <figcaption>A lovely 4-bedroom house in a prime location.</figcaption>
-            </figure>
-            <p>Discover your dream home with our top-rated listings. This beautiful house is located in a peaceful neighborhood with excellent amenities and transportation options.</p>
-        </section>
-
-        <section id="details">
-            <div>
-                <h3>Price</h3>
-                <p>$500,000</p>
-            </div>
-            <div>
-                <h3>Location</h3>
-                <p>New York, USA</p>
-            </div>
-            <div>
-                <h3>Size</h3>
-                <p>2,500 sqft</p>
-            </div>
-            <div>
-                <h3>Contact</h3>
-                <p>Call: 123-456-7890</p>
-            </div>
-        </section>
-    </main>
-
+    <div id="red"></div>
+    <div id="orange"></div>
+    <div id="yellow"></div>
+    <div id="green"></div>
+    <div id="blue"></div>
+    <div id="indigo"></div>
+    <div id="violet"></div>
 </body>
 </html>
+
